// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`response to window width changes 1`] = `
<DocumentFragment>
  <p>
    xs: true
  </p>
  <p>
    sm: true
  </p>
  <p>
    md: true
  </p>
  <p>
    lg: true
  </p>
  <p>
    xl: false
  </p>
</DocumentFragment>
`;

exports[`response to window width changes 2`] = `
<DocumentFragment>
  <p>
    xs: true
  </p>
  <p>
    sm: false
  </p>
  <p>
    md: false
  </p>
  <p>
    lg: false
  </p>
  <p>
    xl: false
  </p>
</DocumentFragment>
`;

exports[`response to window width changes 3`] = `
<DocumentFragment>
  <p>
    xs: true
  </p>
  <p>
    sm: true
  </p>
  <p>
    md: false
  </p>
  <p>
    lg: false
  </p>
  <p>
    xl: false
  </p>
</DocumentFragment>
`;

exports[`response to window width changes 4`] = `
<DocumentFragment>
  <p>
    xs: true
  </p>
  <p>
    sm: true
  </p>
  <p>
    md: true
  </p>
  <p>
    lg: false
  </p>
  <p>
    xl: false
  </p>
</DocumentFragment>
`;

exports[`response to window width changes 5`] = `
<DocumentFragment>
  <p>
    xs: true
  </p>
  <p>
    sm: true
  </p>
  <p>
    md: true
  </p>
  <p>
    lg: true
  </p>
  <p>
    xl: false
  </p>
</DocumentFragment>
`;

exports[`response to window width changes 6`] = `
<DocumentFragment>
  <p>
    xs: true
  </p>
  <p>
    sm: true
  </p>
  <p>
    md: true
  </p>
  <p>
    lg: true
  </p>
  <p>
    xl: true
  </p>
</DocumentFragment>
`;
